Add Spanish translation
Many thanks to larjona!

--- a/.tx/config
+++ b/.tx/config
@@ -2,6 +2,7 @@
 source_file = plapp/locale/en/LC_MESSAGES/djangojs.po
 source_lang = en
 trans.de = plapp/locale/de/LC_MESSAGES/djangojs.po
+trans.es = plapp/locale/es/LC_MESSAGES/djangojs.po
 trans.fr = plapp/locale/fr/LC_MESSAGES/djangojs.po
 trans.it = plapp/locale/it/LC_MESSAGES/djangojs.po
 trans.nl = plapp/locale/nl/LC_MESSAGES/djangojs.po
@@ -14,6 +15,7 @@ host = http://www.transifex.net
 source_file = plauth/locale/en/LC_MESSAGES/django.po
 source_lang = en
 trans.de = plauth/locale/de/LC_MESSAGES/django.po
+trans.es = plauth/locale/es/LC_MESSAGES/django.po
 trans.fr = plauth/locale/fr/LC_MESSAGES/django.po
 trans.it = plauth/locale/it/LC_MESSAGES/django.po
 trans.nl = plauth/locale/nl/LC_MESSAGES/django.po
@@ -23,6 +25,7 @@ trans.ru = plauth/locale/ru/LC_MESSAGES/django.po
 source_file = plapp/locale/en/LC_MESSAGES/django.po
 source_lang = en
 trans.de = plapp/locale/de/LC_MESSAGES/django.po
+trans.es = plapp/locale/es/LC_MESSAGES/django.po
 trans.fr = plapp/locale/fr/LC_MESSAGES/django.po
 trans.it = plapp/locale/it/LC_MESSAGES/django.po
 trans.nl = plapp/locale/nl/LC_MESSAGES/django.po
