Remove stats template (was not used anymore)

--- a/plapp/js/config-form.json
+++ b/plapp/js/config-form.json
@@ -3,6 +3,6 @@
   "paths": ".",
   "inputs": "form.js",
   "mode": "ADVANCED",
-  "level": "VERBOSE",
+  "level": "QUIET",
   "externs": "externs.js"
 }
