Reduce verbosity of plovr (i.e. hide a lot of warnings)

--- a/plapp/js/config-overview.json
+++ b/plapp/js/config-overview.json
@@ -3,6 +3,6 @@
   "paths": ".",
   "inputs": "overview.js",
   "mode": "ADVANCED",
-  "level": "QUIET",
+  "level": "DEFAULT",
   "externs": "externs.js"
 }
