--- a/plapp/js/config-main.json
+++ b/plapp/js/config-main.json
@@ -3,6 +3,6 @@
   "paths": ".",
   "inputs": "main.js",
   "mode": "ADVANCED",
-  "level": "QUIET",
+  "level": "DEFAULT",
   "externs": "externs.js"
 }
